Fix vertical alignment of spike toggle (#471)

--- a/web/src/styles/SpikeTable.scss
+++ b/web/src/styles/SpikeTable.scss
@@ -1,7 +1,3 @@
-.center {
-  text-align: center;
-}
-
 .table {
   table-layout: fixed;
   width: 100%;
@@ -9,4 +5,9 @@
   td {
     word-break: break-all;
   }
+}
+
+.toggle {
+  line-height: 0;
+  text-align: center;
 }
